--- a/final/test.htm
+++ b/final/test.htm
@@ -18,7 +18,41 @@
         });
 
 
-    
+    function generateHtmlTable(data) {
+    var html = '<table  class="table table-condensed table-hover table-striped">';
+
+      if(typeof(data[0]) === 'undefined') {
+        return null;
+      } else {
+		$.each(data, function( index, row ) {
+		  //bind header
+		  if(index == 0) {
+			html += '<thead>';
+			html += '<tr>';
+			$.each(row, function( index, colData ) {
+				html += '<th>';
+				html += colData;
+				html += '</th>';
+			});
+			html += '</tr>';
+			html += '</thead>';
+			html += '<tbody>';
+		  } else {
+			html += '<tr>';
+			$.each(row, function( index, colData ) {
+				html += '<td>';
+				html += colData;
+				html += '</td>';
+			});
+			html += '</tr>';
+		  }
+		});
+		html += '</tbody>';
+		html += '</table>';
+		alert(html);
+		$('#csv-display').append(html);
+	  }
+	}	
         
       // Load the Visualization API and the corechart package.
       google.charts.load('current', {'packages':['corechart']});
