--- a/final/x.html
+++ b/final/x.html
@@ -12,7 +12,7 @@
         dataType: "text",       
         success: function(response) {
             arr_etf = $.csv.toArrays(response);
-            alert(arr_etf.count);
+            alert(arr_etf[0]);
         }   
     });
         
