--- a/final/index.htm
+++ b/final/index.htm
@@ -31,11 +31,11 @@
                     //group_id = arrDataTemp[i][0];
                     group_name = arrDataTemp[i][0];
                     riskiness_r = parseFloat(arrDataTemp[i][1]);
-                    group_weight = parseInt(arrDataTemp[i][2]*100);
+                    group_weight = parseFloat(arrDataTemp[i][2]*100);
                     //alert(group_weight);
-                    link = '<a href="detail.htm?g='+group_name+'" target="_blank">detail</a>';
+                    link = '<a href="detail.htm?m='+month+'&g='+group_name+'" target="_blank">detail</a>';
                     arrPieChartData.push([group_name,group_weight]);
-                    arrTableData.push([group_name,riskiness_r,group_weight]);
+                    arrTableData.push([group_name,riskiness_r,group_weight,link]);
                 } 
             }   
         });
@@ -46,7 +46,7 @@
         data.addColumn('string', 'ETF Group');
         data.addColumn('number', 'Riskiness R');
         data.addColumn('number', 'Weight(%)');
-        //data.addColumn('string', 'Detail');
+        data.addColumn('string', 'Detail');
         data.addRows(arrTableData);
         var options = {
             allowHtml: true,
@@ -78,6 +78,8 @@
     }
         
     function refreshChartsWithMonth(month) {
+        var e = document.getElementById('changed_weight');
+        e.innerHTML = '<a href="change.htm?m='+month+'" target="_blank">View portfolio changed weights</a>';    
         loadData(month);
         drawPieChart();
         drawTable();
@@ -87,7 +89,7 @@
   </head>
 
   <body>
-    <div id='custom-title'>- ETF Investment Profolio -</div>
+    <div id='custom-title'>- ETF Optimized Profolio -</div>
     <div class="space"></div>
     <div id="custom-select">
       <select id="profolio_month" onchange="changeSelectedMonth()">
@@ -95,11 +97,12 @@
         <option value="1">Jan 2019</option>
         <option value="2">Feb 2019</option>
         <option value="3">Mar 2019</option>
-        <option value="4">Apr 2019</option>
+        <option value="4" selected>Apr 2019</option>
       </select>
     </div>
     <div class="custom-head"><h3>Portfolio Pie Chart</h3></div>
     <div id="pie_chart_div"></div>
+    <div id="changed_weight"><a href="change.htm?m=2019-04" target="_blank">View portfolio changed weights</a></div>
     <div class="space"></div>
     <div class="custom-head"><h3>Group List and Risk Index</h3></div>
     <div id="table_div"></div>
